Archive2/e3/bcbd925c4cced3/output
main.cpp: In function 'int main()':
main.cpp:14:69: error: no matching function for call to 'remove_if(std::basic_string<char>::iterator, std::basic_string<char>::iterator, <unresolved overloaded function type>)'
     str2.erase(std::remove_if(str2.begin(), str2.end(), std::isspace),
                                                                     ^
main.cpp:14:69: note: candidate is:
In file included from /usr/include/c++/4.8/algorithm:62:0,
                 from main.cpp:1:
/usr/include/c++/4.8/bits/stl_algo.h:1158:5: note: template<class _FIter, class _Predicate> _FIter std::remove_if(_FIter, _FIter, _Predicate)
     remove_if(_ForwardIterator __first, _ForwardIterator __last,
     ^
/usr/include/c++/4.8/bits/stl_algo.h:1158:5: note:   template argument deduction/substitution failed:
main.cpp:14:69: note:   couldn't deduce template parameter '_Predicate'
     str2.erase(std::remove_if(str2.begin(), str2.end(), std::isspace),
                                                                     ^
